2013-03-02  Ryosuke Niwa  <rniwa@webkit.org>

        Yet another build fix attempt after r144530.

        * WebCoreSupport/WebFrameNetworkingContext.cpp:
        * WebCoreSupport/WebPlatformStrategies.cpp:

2013-03-02  Ryosuke Niwa  <rniwa@webkit.org>

        Another build fix attempt after r144530.

        * WebCoreSupport/WebFrameNetworkingContext.cpp:

2013-03-01  Benjamin Poulain  <bpoulain@apple.com>

        Add a missing symbol after r144524.

        Unreviewed.

        * WebKit.vcproj/WebKitExports.def.in:

2013-02-26  Alexey Proskuryakov  <ap@apple.com>

        Don't add a body to platform request until necessary
        https://bugs.webkit.org/show_bug.cgi?id=110900

        Reviewed by Brady Eidson.

        WebKit1 behavior is unchanged, body is added on every conversion.

        * WebDownloadCFNet.cpp:
        (WebDownload::init):
        (WebDownload::initWithRequest):
        (WebDownload::willSendRequest):
        * WebMutableURLRequest.cpp:
        (WebMutableURLRequest::cfRequest):
        (WebMutableURLRequest::mutableCopy):
        * WebView.cpp:
        (WebView::canHandleRequest):

2013-02-26  Roger Fong  <roger_fong@apple.com>

        Unreviewed AppleWin build fix.

        * WebKit.vcproj/WebKitExportGeneratorCommon.vsprops:

2013-02-24  Alexey Proskuryakov  <ap@apple.com>

        Clarify meaning of default default encoding localizable string
        https://bugs.webkit.org/show_bug.cgi?id=110714

        Reviewed by Eric Carlson.

        * WebPreferences.cpp: Updated a comment.

2013-02-24  Benjamin Poulain  <benjamin@webkit.org>

        REGRESSION(r143837): Broke build on AppleWin http://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29.
        https://bugs.webkit.org/show_bug.cgi?id=110713

        Unreviewed.

        * WebKit.vcproj/WebKitExports.def.in: Add the missing symbol after r143837.

2013-02-21  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r143536.