@@ -24,7 +24,6 @@
 #include "FrameLoaderClient.h"
 #if USE(CFNETWORK)
 #include <CFNetwork/CFHTTPCookiesPriv.h>
-#include <WebCore/ResourceHandle.h>
 #endif
 #include <WebCore/Settings.h>
 #if USE(CFNETWORK)
